refactor the about me section into its own component

--- a/src/index.pug
+++ b/src/index.pug
@@ -2,5 +2,7 @@ doctype html
 html
   head
     title add some content to that tag
+    link(rel="stylesheet", href="style.css")
   body
-    
+    .content
+      include _component/about-me/about-me.pug
