--- a/src/_component/about-me/about-me.pug
+++ b/src/_component/about-me/about-me.pug
@@ -1,14 +1,25 @@
-.section-title Welcome to My CV
-button.disc
-  i.icon__youtube
-  span.button-text YT
-h1 Marian Zburlea
-h2 Career Mentor
-h3 About me
-.description-box__with-shadow
-  p I make the Front-End world a better place every day. I translate geek into English and my passion is to innovate and design for the future.
-  p I'm a proud mentor that helps the masses through CodeTap Academy to jump-start their web developer career and my help reached millions face to face and online.
+.column(span="row")
+  .section-title Welcome to My CV
+.column(span="row")
+  button.disc
+    i.icon__youtube
+    span.button-text YT
+.column(span="row")
+  h1 Marian Zburlea
+.column(span="row")
+  h2 Career Mentor
+.column(span="row")
+  h3 About me
+.column(span="row")
+  .description-box__with-shadow
+    p I make the Front-End world a better place every day. I translate geek into English and my passion is to innovate and design for the future.
+    p I'm a proud mentor that helps the masses through CodeTap Academy to jump-start their web developer career and my help reached millions face to face and online.
 
-button.pill
-  i.icon__download
-  span.button-text Download CV
+.column(span="row")
+  button.pill
+    i.icon__download
+    span.button-text Download CV
+.column(span="row")
+  button.disc
+    i.icon__arrow-down
+    span.button-text AD
