lots and lots of changes, we're almost done with the about me section

--- a/src/_component/about-me/about-me.pug
+++ b/src/_component/about-me/about-me.pug
@@ -1,25 +1,30 @@
 .column(span="row")
-  .section-title Welcome to My CV
+  .section__title-wrapper
+    .section__title Welcome to My CV
+.column(span="row" height="10")
 .column(span="row")
-  button.disc
+  button.button__disc--red
     i.icon__youtube
-    span.button-text YT
+.column(span="row" height="10")
 .column(span="row")
-  h1 Marian Zburlea
+  h1.about-me__main-title Marian Zburlea
 .column(span="row")
-  h2 Career Mentor
+  h2.about-me__sub-title Career Mentor
+.column(span="row" height="10")
 .column(span="row")
-  h3 About me
+  h3.about-me__lead-title About me
 .column(span="row")
   .description-box__with-shadow
-    p I make the Front-End world a better place every day. I translate geek into English and my passion is to innovate and design for the future.
-    p I'm a proud mentor that helps the masses through CodeTap Academy to jump-start their web developer career and my help reached millions face to face and online.
+    p.description I make the Front-End world a better place every day. I translate geek into English and my passion is to innovate and design for the future.
+    p.description I'm a proud mentor that helps the masses through CodeTap Academy to jump-start their web developer career and my help reached millions face to face and online.
 
+.column(span="row" height="10")
 .column(span="row")
-  button.pill
+  button.button__pill--blue
     i.icon__download
     span.button-text Download CV
+.column(span="row" height="10")
 .column(span="row")
-  button.disc
+  button.button__disc--green
     i.icon__arrow-down
-    span.button-text AD
+.column(span="row" height="10")
