--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ html
   head
     title add some content to that tag
     link(rel="stylesheet", href="style.css")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
   body
     .content
       .grid
