--- a/src/index.pug
+++ b/src/index.pug
@@ -7,4 +7,5 @@ html
   body
     .content
       .grid
-        include _component/about-me/about-me.pug
+        include _component/about-me/about-me
+        include _component/connect/connect
