--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,6 @@
 @import '_component/layout/roboto-font';
 @import '_component/layout/layout';
+@import '_component/section-title/section-title';
 @import '_component/about-me/about-me';
+@import '_component/connect/connect';
 @import '_asset/font/style';
