--- a/src/_component/about-me/about-me.scss
+++ b/src/_component/about-me/about-me.scss
@@ -13,7 +13,7 @@
   border: 0;
   border-radius: 20px;
   padding: 0 24px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   font-size: 10px;
   font-weight: bolder;
