--- a/src/_component/connect/connect.scss
+++ b/src/_component/connect/connect.scss
@@ -6,6 +6,20 @@
 .description-box__body {
   padding: 20px;
 }
+.description-box__footer {
+  display: flex;
+  justify-content: center;
+}
+
+@for $i from 1 through 10 {
+  .connect__radio:nth-of-type(#{$i}):checked ~ [data-description-box="#{$i}"] {
+    display: block;
+  }
+}
+
+[data-description-box] {
+  display: none;
+}
 
 .description-box__body {
   border-top: 2px solid #F5F5F5;
@@ -16,6 +30,21 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
   background-color: white;
+  position: relative;
+  margin-top: 1rem;
+  
+  &::after {
+    content: '';
+    background-color: white;
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+    top: -7px;
+    left: 15px;
+    clip-path: polygon(-6px -6px, 100% 0, 0 100%);
+    transform: rotate(45deg);
+  }
 }
 
 .description-box__header {
