--- a/src/_component/layout/layout.scss
+++ b/src/_component/layout/layout.scss
@@ -31,3 +31,11 @@ body {
 input[type="radio"] {
   display: none;
 }
+
+.button-text {
+  padding-left: 12px;
+}
+
+a.button__pill--blue {
+  text-decoration: none;
+}
