feat: finish the skills section

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,3 +9,4 @@ html
       .grid
         include _component/about-me/about-me
         include _component/connect/connect
+        include _component/skills/skills
