--- a/src/style.scss
+++ b/src/style.scss
@@ -3,4 +3,5 @@
 @import '_component/section-title/section-title';
 @import '_component/about-me/about-me';
 @import '_component/connect/connect';
+@import '_component/skills/skills';
 @import '_asset/font/style';
